# athletics

./: pyproject.toml  setup_gecko.sh
athletics/: data2.pickle  main.py  summative_2.ipynb  test.pickle
athletics/logs/fit/20221015-152609/train/: events.out.tfevents.1665847569.georgealexand-athletics-wijejzjlhko.1265.0.v2
athletics/logs/fit/20221015-152644/train/: events.out.tfevents.1665847604.georgealexand-athletics-wijejzjlhko.1265.1.v2
athletics/logs/fit/20221015-152757/train/: events.out.tfevents.1665847678.georgealexand-athletics-wijejzjlhko.1265.2.v2
athletics/logs/fit/20221015-152824/train/: events.out.tfevents.1665847705.georgealexand-athletics-wijejzjlhko.1265.3.v2
athletics/logs/fit/20221015-152824/validation/: events.out.tfevents.1665847705.georgealexand-athletics-wijejzjlhko.1265.4.v2
athletics/logs/fit/20221015-152912/validation/: events.out.tfevents.1665847753.georgealexand-athletics-wijejzjlhko.1265.6.v2
athletics/logs/fit/20221015-153421/train/: events.out.tfevents.1665848061.georgealexand-athletics-wijejzjlhko.1265.7.v2
athletics/logs/fit/20221015-153421/validation/: events.out.tfevents.1665848062.georgealexand-athletics-wijejzjlhko.1265.8.v2
athletics/logs/fit/20221015-154315/train/: events.out.tfevents.1665848595.georgealexand-athletics-wijejzjlhko.1265.9.v2
athletics/logs/fit/20221015-154315/validation/: events.out.tfevents.1665848595.georgealexand-athletics-wijejzjlhko.1265.10.v2
athletics/logs/fit/20221015-154333/train/: events.out.tfevents.1665848613.georgealexand-athletics-wijejzjlhko.1265.11.v2
(+62 files in other folders)
