[tool.poetry]
name = "athletics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
lxml = "^4.9.1"
html5lib = "^1.1"
selenium = "^4.5.0"
scipy = "^1.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
